fix customModal text-align

--- a/src/components/shared/customWidget/custom.module.scss
+++ b/src/components/shared/customWidget/custom.module.scss
@@ -136,7 +136,7 @@
     padding: 30px;
   }
   :global(.ant-form-item-with-help) {
-    text-align: right;
+    text-align: left;
   }
 }
 .hrColor {
